fix student side popup on sessionend and texteditor disable when congrea wifi signal visible

--- a/css/modules/network.css
+++ b/css/modules/network.css
@@ -129,3 +129,7 @@
 #virtualclassCont.congrea  #proposedSpeed #svgContainer {
         margin-top: -2px;
 }
+
+#virtualclassCont.congrea #virtualclassApp.try-to-connect #virtualclassAppLeftPanel #virtualclassAppContainer #virtualclassEditorRich #virtualclassEditorRichBody .vceditor .CodeMirror {
+   pointer-events: none;
+}
